# hotel

./: .gitignore  CLAUDE.md  README.md  docker-compose.electric.yml
backend/: Cargo.toml
backend/migrations/: 001_create_events_table.sql  002_create_hotels_table.sql  003_create_bookings_projection.sql  004_change_booking_dates_to_date.sql
backend/src/: app_state.rs  db.rs  electric_proxy.rs  error.rs  event_processor.rs  handlers.rs  main.rs  models.rs  models_client_events.rs  models_events.rs  models_request.rs  projections.rs  room_assignment.rs
frontend-front-desk/: package-lock.json  package.json  vite.config.ts
frontend-front-desk/src/: App.css  App.tsx
frontend-front-desk/src/components/: BookingsDashboard.tsx  HotelSelection.tsx  RoomSelector.tsx
frontend-front-desk/src/contexts/: OfflineContext.tsx  OfflineEventsContext.tsx
frontend-front-desk/src/hooks/: useElectricBookings.ts
frontend-user/: package-lock.json  package.json
frontend-user/src/: App.css  App.tsx
